<?xml version="1.0" encoding="utf-8"?>
<!-- non-breaking space, U+00A0 -->
<!DOCTYPE resources [
    <!ENTITY nbsp "&#160;">
]>

<resources>
    <string name="app_name">Tankauswertung</string>
    <string name="title_dashboard">Übersicht</string>
    <string name="title_timeline">Chronik</string>
    <string name="title_stats">Statistik</string>
    <string name="title_forecast">Prognose</string>
    <string name="navigation_drawer_open">Öffne Menü</string>
    <string name="navigation_drawer_close">Schließe Menü</string>
    <string name="nav_header_title">Name aktuelles Auto</string>
    <string name="nav_header_subtitle">Infos über aktuelles Auto</string>
    <string name="nav_header_desc">Navigationsheader</string>
    <string name="garage">Garage</string>
    <string name="title_new_car">Hinzufügen</string>
    <string name="title_settings">Einstellungen</string>
    <string name="remove_car">Fahrzeug entfernen</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="anzeigename">Name</string>
    <string name="reichweite_km">Reichweite (km)</string>
    <!-- bei Wortgruppen dürfen auch Leerzeichen gesetzt werden (nach DIN 5008) -->
    <string name="verbrauch_innerorts_l_100km">Anfangswert Verbrauch innerorts (l&nbsp;/&nbsp;100 km)</string>
    <string name="verbrauch_au_erorts_l_100km">Anfangswert Verbrauch außerorts (l&nbsp;/&nbsp;100 km)</string>
    <string name="verbrauch_kombiniert_l_100km">Anfangswert Verbrauch kombiniert (l&nbsp;/&nbsp;100 km)</string>
    <string name="verbrauch_innerorts_kwh_100km">Anfangswert Verbrauch innerorts (kWh&nbsp;/&nbsp;100 km)</string>
    <string name="verbrauch_au_erorts_kwh_100km">Anfangswert Verbrauch außerorts (kWh&nbsp;/&nbsp;100 km)</string>
    <string name="verbrauch_kombiniert_kwh_100km">Anfangswert Verbrauch kombiniert (kWh&nbsp;/&nbsp;100 km)</string>
    <string name="kilometerstand_km">Kilometerstand (km)</string>
    <string name="tankstand_l">Tankstand (%)</string>
    <string name="tankstand_kwh">Restladung</string>
    <string name="tankvolumen_l">Tankvolumen (l)</string>
    <string name="tankvolumen_kwh">Akkukapazität (kWh)</string>
    <!-- Schreibweise von Einheiten ohne Leerzeichen (nach DIN 5008) -->
    <string name="co2_ausstoss_g_km">CO2-Ausstoß (g/km)</string>
    <string name="dark_mode">Nachtmodus</string>
    <string name="done">Fertig</string>
    <string name="zero_number">0</string>
    <string name="edit_car">Fahrzeug bearbeiten</string>
    <string name="keine_fahrzeuge_vorhanden">Keine Fahrzeuge vorhanden</string>
    <string name="elektrofahrzeug">Elektrofahrzeug</string>
    <string name="ereignisseLeer">Noch keine Strecken oder Tankvorgänge vorhanden</string>
    <string name="ereignisseLeerElektro">Noch keine Strecken oder Ladevorgänge vorhanden</string>
    <string name="tankvorgang_bearbeiten">Tankvorgang bearbeiten</string>
    <string name="ereignis_hinzufuegen">Ereignis hinzufügen</string>
    <string name="tankvorgang_hinzufügen">Tankvorgang hinzufügen</string>
    <string name="new_tankvorgang_elektro">Ladevorgang hinzufügen</string>
    <string name="edit_tankvorgang_elektro">Ladevorgang bearbeiten</string>
    <string name="strecke_hinzufügen">Strecke hinzufügen</string>
    <string name="info_button_elektroauto">Info-Button Elektroauto</string>
    <string name="innerorts">innerorts</string>
    <string name="kombiniert">kombiniert</string>
    <string name="ausserorts">außerorts</string>
    <string name="getankte_menge_l">Getankte Menge (l)</string>
    <string name="getankte_menge_kwh">Geladen (kWh)</string>
    <string name="preis">Preis (€)</string>
    <string name="bild_des_tankbelegs">Bild des Tankbelegs</string>
    <string name="tankvorgang_bild_aufnehmen">Tankbeleg fotografieren</string>
    <string name="frueher">&lt;</string>
    <string name="spaeter">&gt;</string>
    <string name="edit_strecke">Strecke bearbeiten</string>
    <string name="edit_tankvorgang">Tankvorgang bearbeiten</string>
    <string name="streckentyp">Streckentyp</string>
    <string name="ereignis_bearbeiten">Ereignis bearbeiten</string>
    <string name="default_tankvolumen">50</string>
    <string name="innerorts_prozent">Innerorts (%)</string>
    <string name="ausserorts_prozent">Außerorts (%)</string>
    <string name="kombiniert_prozent">Kombiniert (%)</string>
    <string name="geschaetzte_werte">Geschätzte Werte</string>
    <string name="streckenlaenge_km">Streckenlänge (km)</string>
    <string name="kraftstoffverbrauch_l">Kraftstoffverbrauch (l)</string>
    <string name="kraftstoffverbrauch_kwh">Energieverbrauch (kWh)</string>
    <string name="kraftstoffkosten_euro">Kraftstoffkosten (€)</string>
    <string name="kraftstoffkosten_euro_elektro">Stromkosten (€)</string>
    <string name="anzahl_noetiger_tankvorgaenge">Anzahl nötiger Tankvorgänge</string>
    <string name="anzahl_noetige_tankvorgaenge_elektro">Anzahl nötiger Ladevorgänge</string>
    <string name="co2_ausstoss_g">CO2-Ausstoß (kg)</string>
    <string name="co2_ausstoss_kg">CO2-Ausstoß (kg)</string>
    <string name="idle">—</string>
    <string name="hundred_number">100</string>
    <string name="jahr">Jahr</string>
    <string name="monat">Monat</string>
    <string name="woche">Woche</string>
    <string name="ten_number">10</string>
    <string name="theme">Thema</string>
    <string name="strecken">Strecken</string>
    <string name="gefahrene_distanz_km">Gefahrene Distanz (km)</string>
    <string name="tank_leer_title">Tank ist leer</string>
    <string name="tank_leer_msg">Ihr Tank ist leer. Wenn Sie dennoch eine Strecke hinzufügen wollen, fügen Sie erst einen Tankvorgang hinzu.</string>
    <string name="tank_leer_msg_elektro">Ihr Akku ist leer. Wenn Sie dennoch eine Strecke hinzufügen wollen, fügen Sie erst einen Ladevorgang hinzu.</string>
    <string name="tank_leer_title_elektro">Akku ist leer</string>
    <string name="tank_voll_title">Tank bereits voll</string>
    <string name="tank_voll_title_elektro">Akku bereits voll</string>
    <string name="tank_voll_msg">Ihr Tank ist bereits voll. Haben Sie eventuell vergessen, eine Strecke hinzuzufügen?</string>
    <string name="tank_voll_msg_elektro">Ihr Akku ist bereits voll. Haben Sie eventuell vergessen, eine Strecke hinzuzufügen?</string>
    <string name="durchschnitt_verbrauch_l_100km">∅-Verbrauch (l&nbsp;/&nbsp;100 km)</string>
    <string name="durchschnitt_verbrauch_kwh_100km">∅-Verbrauch (kWh&nbsp;/&nbsp;100 km)</string>
    <string name="kilometerstand">Kilometerstand</string>
    <string name="verbrauch_je_100_km">∅-Verbrauch\n(je 100 km)</string>
    <string name="reichweite">Reichweite</string>
    <string name="co2_ausstoss">CO2-Ausstoß</string>
    <string name="tankstand">Tankstand</string>
    <string name="kraftstoffverbrauch">Kraftstoffverbrauch</string>
    <string name="kraftstoffkosten">Kraftstoffkosten</string>
    <string name="tankvorgang_bild_entfernen">Bild entfernen</string>
    <string name="energieverbrauch">Energieverbrauch</string>
    <string name="stromkosten">Stromkosten</string>
</resources>
