<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.tankauswertung.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_timeline"
        android:name="com.example.tankauswertung.ui.timeline.TimelineFragment"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_timeline" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.tankauswertung.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_forecast"
        android:name="com.example.tankauswertung.ui.forecast.ForecastFragment"
        android:label="@string/title_forecast"
        tools:layout="@layout/fragment_forecast" />

    <fragment
        android:id="@+id/navigation_new_car"
        android:label="@string/title_new_car"
        tools:layout="@layout/fragment_new_car" />
    <fragment
        android:id="@+id/navigation_settings"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>