<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!-- Kilometerstand -->

            <TextView
                android:id="@+id/labelStreckeHinzufuegenKilometerstand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kilometerstand_km" />

            <EditText
                android:id="@+id/editTextStreckeHinzufuegenKilometerstand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:inputType="numberDecimal"
                android:text="@string/zero_number" />

            <!-- Aktueller Tankstand -->

            <TextView
                android:id="@+id/labelStreckeHinzufuegenAktuellerTankstandTitel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tankstand_l" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelStreckeHinzufuegenAktuellerTankstandStand"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/zero_number" />

                <SeekBar
                    android:id="@+id/seekBarStreckeHinzufuegenAktuellerTankstand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:min="0"
                    android:max="100" />

            </LinearLayout>

            <!-- Art der Strecke -->

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radioButtonInnerorts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/innerorts"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioButtonAusserorts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kombiniert" />

                <RadioButton
                    android:id="@+id/radioButtonKombiniert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ausserorts" />
            </RadioGroup>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
